<resources>
    <string name="app_name">Shaasu Journal</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Reset</string>
    <string name="welcome">Welcome shaasu!</string>
    <string name="creategoal">create</string>

    <!-- Login UI -->
    <string name="login_title">Shaasu Story</string>
    <string name="login_tagline">Everyday is a story. Begin yours.</string>
    <string name="login_username_label">USERNAME</string>
    <string name="login_password_label">PASSWORD</string>
    <string name="login_username_hint">Enter your username</string>
    <string name="login_password_hint">Enter your password</string>
    <string name="login_cta">Begin Your Story</string>
    <string name="login_reset_password">Reset Password</string>
    <string name="login_footer">SHAASU JOURNAL · Everyday is a story. Begin yours.</string>
</resources>